# prevendo_precos_acoes_LSTM

./: README.md  pyproject.toml
prevendo_precos_acoes_lstm/: Preco_Acoes_DeepLearning-LSTM.ipynb  previsoes.py  tempCodeRunnerFile.py
